# gps_tracker

./: .gitignore  CMakeLists.txt  Kconfig  README.md  build.sh  project.conf  requirements.txt  uncrustify.cfg
boards/: thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay
docs/: BOM thingy91.xls  BOM.numbers  bom-list.xlsx  requirements.txt  websites.txt
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  adc.h
drivers/gnss/: CMakeLists.txt  Kconfig  gnss.c  gnss.h
drivers/gsm/: CMakeLists.txt  Kconfig
drivers/led/: CMakeLists.txt  Kconfig  led.c  led.h
drivers/sensor/: CMakeLists.txt  Kconfig  accelerometer.c  accelerometer.h
src/: CMakeLists.txt  Kconfig  main.c
src/common_modules/: CMakeLists.txt  Kconfig  common_modules.c  common_modules.h
src/events/: CMakeLists.txt  Kconfig  app_module_event.c  common_module_event.h  gnss_module_event.c  gnss_module_event.h
src/gnss_module/: CMakeLists.txt  Kconfig  gnss_module.c
src/led_module/: CMakeLists.txt  Kconfig  led_module.c
src/lib/: CMakeLists.txt  common_events.c  common_events.h
src/movement/: CMakeLists.txt  Kconfig  movement.c  movement.h
src/positioning/: CMakeLists.txt  Kconfig  positioning.c  positioning.h
src/sms/: CMakeLists.txt  Kconfig  sms.c
